# HaskellBookSolutions

./: README.md
chp1/: Main.hs
chp10/: chp10.hs
chp11/: chp11.hs  jammin.hs  phone.hs  razor.hs
chp12/: chp12.hs  eqCaseGuard.hs  naturals.hs  person.hs  unfolds.hs
chp13/: chp13.hs
chp14/WordNumberTest/: WordNumberTest.cabal
chp14/WordNumberTest/src/: wordNumberTest.hs
chp14/addition/: Addition.hs  addition.cabal
chp14/addition/.stack-work/install/x86_64-osx/lts-5.6/7.10.3/flag-cache/: HUnit-1.3.1.1-f2b86199f3ffb0cdac2f2fc848f30c47  addition-0.1.0.0-42835c55c4813ca406d2432f75a6d410  addition-0.1.0.0-5b8c17c66d4de1ed876ae092cc0f68f8  addition-0.1.0.0-e194247f299e8bfaaf7ec2b3b774ab97  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  hspec-2.2.2-c16f3fd961beb872bf59234cf6fa131e  hspec-core-2.2.2-303e0e7585ce44d0df1670267233495d  hspec-discover-2.2.2-8aa4073730c676dbe210ea8bffd8d092  hspec-expectations-0.7.2-e01b0c4cdf427b69ab08b228c320f46a  quickcheck-io-0.1.2-c03c7e6f7b2031e9bc9bfa8999392aed  setenv-0.1.1.3-4d70f2e61b1bd0645017164a0ca26ee9  stm-2.4.4.1-7050c728ed5b2315e2c6b56d8bf9837f
chp14/addition/.stack-work/install/x86_64-osx/lts-5.6/7.10.3/lib/x86_64-osx-ghc-7.10.3/addition-0.1.0.0-9qN1Z8TzQ8ZCIvgZr4Itol/: Addition.hi  libHSaddition-0.1.0.0-9qN1Z8TzQ8ZCIvgZr4Itol-ghc7.10.3.dylib
chp14/addition/.stack-work/install/x86_64-osx/lts-5.6/7.10.3/lib/x86_64-osx-ghc-7.10.3/addition-0.1.0.0-CzBUEK82eGXBbcelRMvio5/: Addition.dyn_hi  Addition.hi
chp14/addition/.stack-work/install/x86_64-osx/lts-5.6/7.10.3/pkgdb/: addition-0.1.0.0-a13bf62e6adc242bc3d1bb62325d61da.conf  package.cache
chp15/: monoids.hs
chp16/: functors1.hs  intermission.txt  lifting.hs  replaceExperiment.hs
chp17/: apl1.hs  chapterExercises.hs  cow.hs  exercises.hs  exercises2.hs  exercises3.hs  exercises4.hs  exercises5.hs  exercises6.hs  exercises7.hs  exercises8.hs  (+1 more)
(+53 files in other folders)
