name:                addition
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/hitscotty/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Portorreal
maintainer:          Jportorreal77@gmail.com
copyright:           2016, HitScotty
category:            text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010
